<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/bg_dark"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_weight="0"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="50dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/left_long" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/settings"
                    android:textColor="@color/white"
                    android:textSize="20sp" /> <!-- Changed to 'sp' for text size -->
            </LinearLayout>
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/circluar_shape"
                android:contentDescription="Avatar"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar" />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:text="@string/change_avatar"
                android:textSize="11sp"
                android:textColor="@color/link_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="9"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:background="@drawable/rounded_big">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:background="@drawable/rounded_shape">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:padding="20dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/push_msg"
                        android:textSize="18sp"
                        android:layout_weight="1" />

                    <Switch
                        android:id="@+id/mySwitch1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumbTint="@color/red"
                        android:trackTint="@color/gray"
                        android:trackTintMode="src_in"
                        android:showText="false"
                        android:layout_marginStart="16dp" /> <!-- Add margin here -->
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:paddingTop="20dp"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:text="@string/lan_menu"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="20dp"
                            android:text="@string/current_lan"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="40dp"
                        android:layout_gravity="end"
                        android:layout_marginRight="25dp"
                        android:src="@drawable/angle" />

                </LinearLayout>



            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="225dp"
                android:orientation="vertical"

                android:background="@drawable/rounded_shape">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="20dp"
                     >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:paddingTop="5dp"
                    android:text="@string/change_code"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="end"
                    android:src="@drawable/angle"/>

                             </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal"
                    android:padding="20dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:text="@string/use_touch_id"/>
                    <Switch
                        android:id="@+id/mySwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:thumbTint="@color/red"
                        android:trackTint="@color/gray"
                        android:showText="false" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:orientation="horizontal"
                    android:padding="20dp">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textSize="18dp"
                        android:text="@string/change_number"/>
                                   <ImageView
                                       android:layout_width="20dp"
                                       android:layout_height="40dp"
                                       android:src="@drawable/angle"
                                       android:layout_marginRight="10dp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:background="@drawable/rounded_shape"
                android:layout_marginTop="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/quit"
                    android:layout_gravity="center"
                    android:textSize="21dp"
                    android:textColor="@color/red"
                    android:gravity="center_horizontal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_horizontal"
                android:padding="25dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/here"
                    android:layout_marginLeft="3dp"
                    android:textColor="@color/link_color"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_height="wrap_content"
                        android:text="@string/can_change"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
